26May15=======================================================================
1. Add CTY-2506 prefix file
01Mar15=======================================================================
1. Add CTY-2503 prefix file
13Feb15=======================================================================
1. Fix problem with sh/dx <call> if people are logging spots to a SQL database
3. Added CTY-2502 prefixes. 
3. My late father would have been 102 today.
27Nov14=======================================================================
1. Add CTY-2415 prefix list
25Nov14=======================================================================
1. Add CTY-2414 prefix list
21Nov14=======================================================================
1. Add CTY-2413 prefix list
21Oct14=======================================================================
1. Add CTY-2411 prefix list
14Oct14=======================================================================
1. Add CTY-2410 prefix list
2. Switch off autoflush on all logging
30Sep14=======================================================================
1. Add CTY-2409 prefix list
2. Add new wpxloc.raw
21Apr14=======================================================================
1. Add CTY-2405 prefix list
08Mar14=======================================================================
1. Add newer version of wpxloc.raw with some missing prefixes added.
07Mar14=======================================================================
1. Add new version of wpxloc.raw 
2. Fix a small crash with Spot::dup
12Jan14=======================================================================
1. Fix minor issue with dx command when used in a script, as found by
   Christian Furst.
2. Fix (rather serious) error in import_cmd that did not reset callsigns
   correctly in $main::me.
30Dec13=======================================================================
1. Add CTY2312 prefix changes