@@ -3437,6 +3437,7 @@
   '=4U1WB' => '181',
   '=4U1WRC' => '23',
   '=4U20B' => '167,782,784,786,788,790,792,794,796,798,800,802,804,806,808,810,812,814,816,818,820,822,824,826,828,830,832,834',
+  '=4U5F' => '167,782,784,786,788,790,792,794,796,798,800,802,804,806,808,810,812,814,816,818,820,822,824,826,828,830,832,834',
   '=4Y1A' => '965',
   '=8J1RL' => '1703,1705,1708,1710,1712,1714,1716,332,345',
   '=9A70DP/KA' => '47',
@@ -3447,7 +3448,6 @@
   '=9M4ARD/6' => '54',
   '=9M4ARD/8' => '54',
   '=9M4CBP' => '54',
-  '=A41MO/SQ' => '63',
   '=AA2IL' => '181',
   '=AA4DD' => '181',
   '=AA4NU' => '181',
@@ -3463,7 +3463,6 @@
   '=AB5ZA' => '181',
   '=AB8RL' => '181',
   '=AB9OM' => '194,884,886,888,890,892',
-  '=AB9OQ' => '182',
   '=AC4CA' => '181',
   '=AC4G' => '181',
   '=AC4M' => '181',
@@ -3501,7 +3500,6 @@
   '=AX/VK0TH' => '338',
   '=AX8AA' => '280,1519,1521,1523,1525,1527,1529,1531,1533',
   '=BD9BI/0' => '72,404,406,408,410,412,414,416,418,420,422,424,426,428,430,432,434,436,438,440,442,444,446,448,450,452,454,456,458,460,462,464',
-  '=BG8FUL/0' => '72,404,406,408,410,412,414,416,418,420,422,424,426,428,430,432,434,436,438,440,442,444,446,448,450,452,454,456,458,460,462,464',
   '=BG9XD/5' => '72,404,406,408,410,412,414,416,418,420,422,424,426,428,430,432,434,436,438,440,442,444,446,448,450,452,454,456,458,460,462,464',
   '=BS7H' => '69',
   '=C7A' => '965',
@@ -3532,7 +3530,7 @@
   '=EH90IARU/6' => '102,103',
   '=EH90IARU/8' => '104,105',
   '=FK8IK/C' => '124',
-  '=FO/F6BFH' => '129',
+  '=FO/F6BFH/P' => '129',
   '=GB0BTC' => '144',
   '=GB0GDS' => '146,680',
   '=GB0GMT' => '148',
@@ -3580,7 +3578,6 @@
   '=GB4MD' => '148',
   '=GB4MDI' => '148',
   '=GB4MPI' => '148',
-  '=GB4MSE' => '146,680',
   '=GB4SDD' => '148',
   '=GB4UAS' => '144',
   '=GB5AG' => '146,680',
@@ -3590,7 +3587,6 @@
   '=GB6BLB' => '148',
   '=GB6GGM' => '148',
   '=GB8MD' => '148',
-  '=GB8RAF' => '144',
   '=GM0CXQ' => '679',
   '=GM0EKM' => '679',
   '=GM0GFL' => '679',
@@ -4078,7 +4074,6 @@
   '=N9NC' => '181',
   '=N9RV' => '181',
   '=N9SB' => '181',
-  '=N9SBL' => '189',
   '=N9TX' => '181',
   '=N9UY' => '181',
   '=N9VPV' => '181',
@@ -4132,6 +4127,7 @@
   '=R120RU' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=R120RW' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=R120RZ' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
+  '=R1ZY/9' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=R2015R' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=R2MWO' => '267',
   '=R3CA/9' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
@@ -4151,9 +4147,9 @@
   '=RI1ANZ' => '1703,1705,1708,1710,1712,1714,1716,332,345',
   '=RI59ANT' => '345',
   '=RJ4P' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
+  '=RM2D/0' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RM4P' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
   '=RM4R' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
-  '=RN9O/8' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RP70AB' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RP70AF' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RP70AS' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
@@ -4212,16 +4208,15 @@
   '=RP70YF' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RP70ZF' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RP70ZO' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
-  '=RQ0C/4' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
   '=RQ4D/8' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RV3DSA/0' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RW9WJ/4' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
+  '=RX6DL/8/P' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=RY1AAA/2' => '267',
   '=SV0LB' => '243',
   '=SV0XBN/9' => '243',
   '=SV0XCA/5' => '242',
   '=SV0XCC/9' => '243',
-  '=SV2/YL7A' => '241',
   '=SV2ASP/A' => '241',
   '=TA6CQ/1' => '1155',
   '=TC100A' => '1155',
@@ -4244,7 +4239,6 @@
   '=UA9B/1' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
   '=UA9FIT/4' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
   '=UA9MA/9' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
-  '=UA9UAX/4' => '266,1189,1191,1193,1195,1197,1199,1201,1203,1205,1207,1209,1211,1213,1215,1217,1219,1221,1223,1225,1227,1229,1231,1233,1235,1237,1239,1241,1243,1245,1247,1249,1251,1253,1255,1257,1259,1261,1263,1265,1267,1269,1271,1273,1275,1277,1279,1281,1283,1285,1287,1289,1291,1293,1295,1297,1299',
   '=UA9UAX/9' => '268,1301,1303,1305,1307,1309,1311,1313,1315,1317,1319,1321,1323,1325,1327,1329,1331,1333,1335,1337,1339,1341,1343,1345,1347,1349,1351,1353,1355,1357,1359,1361,1363',
   '=UE2AT' => '267',
   '=UE2BF' => '267',
@@ -4261,10 +4255,9 @@
   '=VE2FK' => '279,1487,1489,1491,1493,1495,1497,1499,1501,1503,1505,1507,1509,1511,1513,1515,1517',
   '=VE2GSO' => '279,1487,1489,1491,1493,1495,1497,1499,1501,1503,1505,1507,1509,1511,1513,1515,1517',
   '=VE2IM' => '279,1487,1489,1491,1493,1495,1497,1499,1501,1503,1505,1507,1509,1511,1513,1515,1517',
-  '=VER20150526' => '279,1487,1489,1491,1493,1495,1497,1499,1501,1503,1505,1507,1509,1511,1513,1515,1517',
-  '=VERSION' => '245',
+  '=VER20150529' => '279,1487,1489,1491,1493,1495,1497,1499,1501,1503,1505,1507,1509,1511,1513,1515,1517',
+  '=VERSION' => '260',
   '=VK0IR' => '337',
-  '=VK100ANZAC' => '280,1519,1521,1523,1525,1527,1529,1531,1533',
   '=VP6DX' => '287',
   '=VP8ADE' => '1703,1705,1708,1710,1712,1714,1716,332,345',
   '=VP8ADE/B' => '1703,1705,1708,1710,1712,1714,1716,332,345',
