@@ -1,3 +1,6 @@
+02Jun15=======================================================================
+1. Extend regex for quit to allow other commands starting in 'q'.
+2. Add CTY-2506 prefix file
 26May15=======================================================================
 1. Add CTY-2506 prefix file
 01Mar15=======================================================================
